Fix #97